fix gap custom property for centered navbars

--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -174,11 +174,11 @@
 
 .uk-navbar-center-left {
     right: 100%; // Fallback if gap is 0
-    right:  ~'calc(100% + var(--navbar-nav-item-gap))';
+    right:  ~'calc(100% + var(--uk-navbar-nav-item-gap))';
 }
 .uk-navbar-center-right {
     left: 100%; // Fallback if gap is 0
-    left: ~'calc(100% + var(--navbar-nav-item-gap))';
+    left: ~'calc(100% + var(--uk-navbar-nav-item-gap))';
 }
 
 [class*='uk-navbar-center-'] {
